--- a/vocab/templates/vocab.html
+++ b/vocab/templates/vocab.html
@@ -110,7 +110,7 @@
 				}
 				if (game and rslt) {
 					//redirect on success to /success
-					location.replace("/success")
+					location.replace("/success");
 				}
 			});
 		}):
